<resources>
    <string name="app_name">BoardGames</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="die_result">Die Result = </string>
    <string name="roll_die">roll die</string>
    <string name="type_dice_number">Type Dice Number:</string>
    <string name="_0_1_2_3">0,1,2,3</string>
    <string name="submit">Submit</string>
    <string name="new_game">NEW GAME</string>
    <string name="load_game">LOAD GAME</string>
    <string name="type_dice_sides">Type Dice Sides:</string>
    <string name="add_new_player">ADD NEW PLAYER</string>
    <string name="type_name">Type Name</string>
    <string name="_1_99">1–99</string>
    <string name="exit_notification_app">EXIT NOTIFICATION APP!</string>
    <string name="roll">ROLL</string>
    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
</resources>