<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ActivityNewGame">

    <EditText
        android:id="@+id/et_PlayerName1"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="216dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PlayerName2"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="284dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PlayerName3"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="356dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PlayerName4"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="424dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PlayerName5"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="492dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_PlayerName6"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="564dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer1"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer2"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="272dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer3"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="348dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer4"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="416dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer5"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="484dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFirstPlayer6"
        android:layout_width="206dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="556dp"
        android:text="@string/add_new_player"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/iv_delete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/iv_delete3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/iv_delete4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="424dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/iv_delete5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="492dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <ImageView
        android:id="@+id/iv_delete6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="564dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/type_dice_number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/type_dice_sides"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_DieSidesNew"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_1_99"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/et_DieNumberNew"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_1_99"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/bt_SubmitNew"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="36dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>