<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLoadGame">

    <TextView
        android:id="@+id/tv_PlayerName1"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PlayerName2"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="324dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PlayerName3"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="392dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PlayerName4"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="460dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PlayerName5"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="520dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PlayerName6"
        android:layout_width="383dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="576dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_DieNumber"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_DieSides"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/type_dice_number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="164dp"
        android:text="@string/type_dice_sides"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_SubmitLoad"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="36dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>